--- a/bales-src/theme/tufte/tufte.css
+++ b/bales-src/theme/tufte/tufte.css
@@ -4,28 +4,28 @@
 
 @font-face {
   font-family: "et-book";
-  src: url("https://edwardtufte.github.io/tufte-css/et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf");
+  /*src: url("https://edwardtufte.github.io/tufte-css/et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf"); */
   font-weight: normal;
   font-style: normal
 }
 
 @font-face {
   font-family: "et-book";
-  src: url("https://edwardtufte.github.io/tufte-css/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf");
+/*  src: url("https://edwardtufte.github.io/tufte-css/et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf"); */
   font-weight: normal;
   font-style: italic
 }
 
 @font-face {
   font-family: "et-book";
-  src: url("https://edwardtufte.github.io/tufte-css/et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf");
+/*  src: url("https://edwardtufte.github.io/tufte-css/et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf"); */
   font-weight: bold;
   font-style: normal
 }
 
 @font-face {
   font-family: "et-book-roman-old-style";
-  src: url("https://edwardtufte.github.io/tufte-css/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf");
+  /*src: url("https://edwardtufte.github.io/tufte-css/et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf");*/
   font-weight: normal;
   font-style: normal;
 }
