--- a/src/1-root/root.css
+++ b/src/1-root/root.css
@@ -3,6 +3,7 @@ body {
           Roboto, Oxygen-Sans,
           Ubuntu, Cantarell,
           "Helvetica Neue", sans-serif, Kitchen-Sink;
+  font-size:18px;
   position:fixed;
   top:0;
   bottom:0;
@@ -44,7 +45,7 @@ footer{
 
 
 #fronkensteen-content{
-  z-index:2;
+  z-index:0;
   margin:0;
   padding:0;
   position:fixed;
