--- a/src/topcoat/topcoat-mobile-light.css
+++ b/src/topcoat/topcoat-mobile-light.css
@@ -809,7 +809,7 @@
 * limitations under the License.
 *
 */
-
+/*
 input[type="checkbox"] {
   position: absolute;
   overflow: hidden;
@@ -863,7 +863,7 @@ input[type="checkbox"] {
   box-sizing: border-box;
   background-clip: padding-box;
 }
-
+*/
 /**
 *
 * Copyright 2012 Adobe Systems Inc.;
@@ -917,7 +917,7 @@ input[type="checkbox"] {
 * limitations under the License.
 *
 */
-
+/*
 input[type="checkbox"] {
   position: absolute;
   overflow: hidden;
@@ -977,7 +977,7 @@ input[type="checkbox"]:disabled + .topcoat-checkbox__checkmark {
   box-sizing: border-box;
   background-clip: padding-box;
 }
-
+*/
 /* topdoc
   name: Checkbox
   description: Default skin for Topcoat checkbox
@@ -1005,7 +1005,7 @@ input[type="checkbox"]:disabled + .topcoat-checkbox__checkmark {
     - mobile
     - checkbox
 */
-
+/*
 .topcoat-checkbox__checkmark {
   height: 2rem;
 }
@@ -1074,7 +1074,7 @@ input[type="checkbox"]:disabled:active + .topcoat-checkbox__checkmark:before {
   background: #e5e9e8;
   box-shadow: inset 0 1px #fff;
 }
-
+*/
 /**
 *
 * Copyright 2012 Adobe Systems Inc.;
