--- a/src/1-root/root.css
+++ b/src/1-root/root.css
@@ -100,7 +100,8 @@ mark {
 }
 
 .activeSearchResult {
-  background-color:yellow;
+  background-color:rebeccapurple;
+  color:white;
 }
 @media print {
     .noprint {
