--- a/src/topcoat/topcoat-mobile-light.css
+++ b/src/topcoat/topcoat-mobile-light.css
@@ -3531,7 +3531,7 @@ body {
   font: 16px system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen-Sans,
           Ubuntu, Cantarell,
-          "Helvetica Neue", sans-serif, Kitchen-Sink
+          "Helvetica Neue", sans-serif, Kitchen-Sink;
   font-weight: 400;
 }
 
