--- a/src/topcoat/topcoat-mobile-light.css
+++ b/src/topcoat/topcoat-mobile-light.css
@@ -3526,7 +3526,7 @@ input[type="search"]::-webkit-search-cancel-button {
 body {
   margin: 0;
   padding: 0;
-  background: #dfe2e2;
+  background: #979898;
   color: #000;
   font: 16px system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen-Sans,
