Make text selection color in editor consistent with color in main pages.

--- a/src/1-root/root.css
+++ b/src/1-root/root.css
@@ -15,6 +15,22 @@ body {
   background: #979898;
   overflow:hidden;
 }
+
+textarea::-moz-selection {
+  color: white;
+  background-color: rebeccapurple;
+}
+
+textarea::-webkit-selection {
+  color: white;
+  background-color: rebeccapurple;
+}
+textarea::selection {
+  color: white;
+  background-color: rebeccapurple;
+}
+
+
 #upload_download{
   display:none;
 }
